--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -43,6 +43,25 @@ h1 {
     }
 }
 
+h2 {
+    font-size: 50px;
+}
+@media screen and (max-width: 1200px) {
+    h2 {
+        font-size: 40px;
+    }
+}
+@media screen and (max-width: 768px) {
+    h2 {
+        font-size: 20px;
+    }
+}
+@media screen and (max-width: 320px) {
+    h2 {
+        font-size: 12px;
+    }
+}
+
 hr {
     height: 3px; 
     width: 100%;
