--- a/src/templates/blogPost.css
+++ b/src/templates/blogPost.css
@@ -6,7 +6,7 @@ main {
     font-family: avenir;
 }
 
-content {
+article {
     display: block;
     font-size: 20px;
     text-align: left;
@@ -14,19 +14,19 @@ content {
 }
 
 @media screen and (max-width: 1200px) {
-    content {
+    article {
         font-size: 18px;
         max-width: 65%;
     }
 }
 @media screen and (max-width: 768px) {
-    content {
+    article {
         font-size: 15px;
         max-width: 90%;
     }
 }
 @media screen and (max-width: 320px) {
-    content {
+    article {
         font-size: 12px;
         max-width: 100%;
     }
