Adding article on the efficiency trap

--- a/src/templates/blogPost.css
+++ b/src/templates/blogPost.css
@@ -1,38 +1,42 @@
 main {
-    display: flex;
-    margin-top: 0px;
-    flex-direction: column;
-    align-items: center;
-    font-family: avenir;
+  display: flex;
+  margin-top: 0px;
+  flex-direction: column;
+  align-items: center;
+  font-family: avenir;
 }
 
 article {
-    display: block;
-    font-size: 20px;
-    text-align: left;
-    max-width: 60%;
+  display: block;
+  font-size: 20px;
+  text-align: left;
+  max-width: 60%;
+}
+
+img {
+  max-width: 100%;
 }
 
 @media screen and (max-width: 1400px) {
-    article {
-        max-width: 75%;
-    }
+  article {
+    max-width: 75%;
+  }
 }
 @media screen and (max-width: 768px) {
-    article {
-        max-width: 90%;
-    }
+  article {
+    max-width: 90%;
+  }
 }
 @media screen and (max-width: 320px) {
-    article {
-        max-width: 100%;
-    }
+  article {
+    max-width: 100%;
+  }
 }
 
 .flex {
-    display: flex;
+  display: flex;
 }
 
 .flex-content {
-    flex: content;
+  flex: content;
 }
